# facto

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  ROADMAP.md  SECURITY.md  cliff.toml  deny.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  zizmor.yml
docs/: coding-assistants.md  tools.md
facto-core/: Cargo.toml  build.rs
facto-core/src/: build_info.rs  config.rs  http.rs  lib.rs  models.rs  normalize.rs
facto-core/src/forges/: codeberg.rs  github.rs  gitlab.rs  manager.rs  mod.rs  trait_def.rs
facto-core/src/lockfiles/: mod.rs  models.rs  npm.rs  pipfile.rs  pnpm.rs  toml_common.rs
facto-core/src/registries/: cache.rs  crates_io.rs  dockerhub.rs  go.rs  manager.rs  maven.rs  mod.rs  npm.rs  nuget.rs  packagist.rs  pypi.rs  rubygems.rs  trait_def.rs
facto-core/src/runtimes/: catalog.rs  endoflife.rs  manager.rs  mod.rs  trait_def.rs
facto-mcp/: Cargo.toml
facto-mcp/src/: lib.rs  server.rs
facto-mcp/src/tools/: forge.rs  lockfiles.rs  meta.rs  mod.rs  packages.rs  runtime.rs  search.rs
facto-run/: Cargo.toml  README.md  pyproject.toml
facto-run/src/: alias.rs  main.rs
facto-run/tests/: test_lockfiles.rs  test_meta.rs  test_packages.rs
facto-run/tests/common/: mod.rs
