[workspace]
members = ["facto-core", "facto-mcp", "facto-run"]
resolver = "3"

[workspace.package]
version = "0.1.0-alpha.1"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/ggueret/facto"
homepage = "https://facto.run"
authors = ["Geoffrey Guéret <geoffrey@gueret.dev>"]

[workspace.dependencies]
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
reqwest = { version = "0.13", features = ["json"] }
schemars = { version = "1", features = ["chrono04"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
