[package]
name = "facto-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "MCP server library for facto: exposes package, forge, runtime, and lockfile tools over rmcp"
documentation = "https://docs.rs/facto-mcp"
readme = "../README.md"
keywords = ["mcp", "rmcp", "ai-agents", "package-registry", "supply-chain"]
categories = ["api-bindings", "development-tools"]

[dependencies]
anyhow = "1"
facto-core = { path = "../facto-core", version = "0.1.0-alpha.1" }
futures = "0.3"
rmcp = { version = "1.7", features = ["server", "macros", "transport-io"] }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = "0.7"
tracing = { workspace = true }
