[package]
name = "facto-run"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Thin CLI wrapper for facto: dispatches to facto-mcp for `facto mcp`, future subcommands will follow"
documentation = "https://docs.rs/facto-run"
readme = "README.md"
keywords = ["mcp", "cli", "ai-agents", "claude", "anti-hallucination"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "facto"
path = "src/main.rs"

[[bin]]
# Tiny wrapper so `uvx facto.run mcp` resolves without `--from`.
# See src/alias.rs for rationale.
name = "facto-run"
path = "src/alias.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
facto-core = { path = "../facto-core", version = "0.1.0-alpha.1" }
facto-mcp = { path = "../facto-mcp", version = "0.1.0-alpha.1" }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
rmcp = { version = "1.7", features = ["client", "transport-child-process"] }
serde_json = { workspace = true }
tokio = { workspace = true }
